...
                android:src="@drawable/ic_edit"
                android:background="@drawable/action_button_background"
                android:layout_marginEnd="8dp"
                android:contentDescription="Edit Subscriber" />

            <ImageButton
                android:id="@+id/buttonDeleteSubscriber"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_delete"
                android:background="@drawable/action_button_delete_background"
                android:contentDescription="Delete Subscriber" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
...
